<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz Machine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">Quiz Main Page</string>
    <string name="second">Second Page</string>
    <string name="title_activity_new_user">New User Registration</string>
    <string name="enter">Enter</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="new_user_registration">Please enter the following:</string>
    <string name="studentId">Student ID</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_newUser">New User Registration</string>
    <string name="title_activity_welcome">Welcome Screen</string>
    <string name="quizzes_taken">Quizzes taken / Quizzes remaining</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_results">5/14</string>
    <string name="start_next_quiz">Start next quiz!</string>
    <string name="average_score">Average Score</string>
    <string name="user_average_score">100%</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="register">Register</string>
    <string name="title_activity_register">User Registration</string>
    <string name="register_success">You have been successfully registered.</string>
    <string name="login">Login</string>
    <string name="quizNumber">Quiz #6</string>
    <string name="quizQ1">1. When was the Feidler contingency model theory developed?</string>
    <string name="a">a. 1983</string>
    <string name="b">b. 1999</string>
    <string name="c">c. 1977</string>
    <string name="d">a. 2001</string>
    <string name="title_activity_score">Quiz Result</string>
    <string name="submit">Submit</string>
	<string name="your_score_is">Your score is</string>
	<string name="quiz_score">100%</string>
	<string name="return_welcome">Return</string>
	<string name="logout">Logout</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="login_progress_signing_in">Signing in</string>
	<string name="quiz_title">Quiz #</string>
</resources>
